[package]
name = "da-builder-sample-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
alloy-provider = "1.0"
alloy-transport-http = "1.0"
alloy-signer-local = "1.0"
alloy-contract = "1.0"
alloy-rpc-types = "1.0"
alloy-network = "1.0"
alloy-dyn-abi = "1.0"
alloy-primitives = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
eyre = "0.6"
url = "2.5"
alloy-sol-types = "1.2"
alloy-eips = "1.0.20"

[build-dependencies]
serde_json = "1.0" 
